# DENFIS

./: README.md  pyproject.toml  requirements.txt
DENFIS/: CalcMF_DENFIS.py  DENFIS2.py  DENFIS_GasFurnace2.py  Defuzzifier.py  Denorm_Data.py  ECM.py  Norm_Data.py  denfis_predict2.py
DENFIS/data/: GasFurnace292pts.csv  Mackey.csv
tests/: DENFIS_Mackey2.py
